--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,20 +1,35 @@
 server {
     listen 80;
-    server_name your-domain.com;  # Replace with your domain
-
-    # Redirect HTTP to HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name your-domain.com;  # Replace with your domain
-
-    ssl_certificate /etc/nginx/ssl/your-cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/your-key.pem;
-
+    server_name langvision.in;  # Replace with your actual domain name
+    
     location / {
-        proxy_pass http://api:8000;
+        proxy_pass http://api:8000;  # 'api' is the service name in docker-compose
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Add location for docs
+    location /docs {
+        proxy_pass http://api:8000/docs;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Add location for openapi.json
+    location /openapi.json {
+        proxy_pass http://api:8000/openapi.json;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
