--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,9 +1,13 @@
 server {
     listen 80;
-    server_name langvision.in;  # Replace with your actual domain name
-    
+    server_name langvision.in;
+
+    # Logging configuration
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     location / {
-        proxy_pass http://api:8000;  # 'api' is the service name in docker-compose
+        proxy_pass http://api:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -14,25 +18,17 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Add location for docs
     location /docs {
         proxy_pass http://api:8000/docs;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Add location for openapi.json
     location /openapi.json {
         proxy_pass http://api:8000/openapi.json;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
